center dot z-index fix

--- a/Clock/style.css
+++ b/Clock/style.css
@@ -4,7 +4,7 @@
     top: 0px;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 999999999;
     background: url("https://lkp.dispendik.surabaya.go.id/assets/loading.gif") 50% 50% no-repeat rgb(249, 249, 249);
 }
 
